<resources>
    <string name="app_name">Matibabu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_nom_hopital">Nom de l\'hopital </string>
    <string name="hint_address_hopital">Addresse de l\'hopital</string>
    <string name="hint_nom_responsable">Nom du Responsable</string>
    <string name="hint_num_responsable">Numero du responsable</string>
    <string name="btn_save">Enregistrer</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_home">Acceuil</string>
    <string name="menu_new">Ajouter</string>
    <string name="menu_cpn">Cpn</string>
    <string name="menu_statistic">Statistique</string>
    <string name="title_activity_main">Accueil</string>
    <string name="action_search">Recherche</string>

    <!--Info de la patiente -->
    <string name="nom_patiente"> Nom complet</string>
    <string name="pat_occupation">Occupation</string>
    <string name="pat_address">Addresse</string>
    <string name="pat_telephone">Telephone</string>
    <string name="pat_conjoint"> Nom du conjoint</string>
    <string name="pat_conjoint_tel">Numero du conjoint</string>
    <string name="pat_occupation_coj">Occupation du Conjoint</string>
    <string name="pat_date">Date de naissance</string>
    <string name="pat_etat_civil"> Etat civil</string>
    <string name="date_de_naissance">Date de Naissance</string>
    <string name="date_du_prochain_rdv">Date Rendez-vous</string>
    <string name="urgence_name">Persone a conctacter</string>
    <string name="urgence_num">Numero de la personne</string>
    <string name="next">Suivant</string>
    <string name="ant_medicaux">Medicaux</string>
    <string name="ant_gyneco">Gynecologiques</string>
    <string name="ant_obstericaux">Obstetricaux</string>
    <string name="save">Enregister</string>

    <!--antecedents text-->

    <string name="med_text_tbc">Tbc</string>
    <string name="med_text_hta">Hta</string>
    <string name="med_text_dbt">Dbt</string>
    <string name="med_text_sca">Sca/ass</string>
    <string name="med_text_car">Car</string>
    <string name="med_text_mgf">Mgf</string>
    <string name="med_text_raa">Raa</string>
    <string name="med_text_syphylis">Syphylis</string>
    <string name="med_text_vih">Vih/sida</string>
    <string name="med_text_vvs">Vvs</string>
    <string name="med_text_Pep">Peo</string>

    <string name="gyn_text_cesariene">Cesarienne</string>
    <string name="gyn_text_cerclage">Cerclage</string>
    <string name="gyn_text_fibrone">Fibrone uterin</string>
    <string name="gyn_text_fracture_bassin">Fracture bassin</string>
    <string name="gyn_text_geu">Geu</string>
    <string name="gyn_text_Fistude">Fistude</string>
    <string name="gyn_text_uterus">Uterus Cicatriciel</string>
    <string name="gyn_text_traitement">Traitement pour sterilite</string>

    <string name="obs_text_parite">Parite</string>
    <string name="obs_text_gestite">Gestite</string>
    <string name="obs_text_Enfant">Enfants en vie</string>
    <string name="obs_text_avortement">Avortements</string>
    <string name="obs_text_Dystocie">Distocie</string>
    <string name="obs_text_Eutocie">Eutocie</string>
    <string name="obs_text_premature">Premature</string>
    <string name="obs_text_post_mature">Post-mature</string>
    <string name="obs_text_mort_ne">Mort-ne</string>
    <string name="obs_text_complication">Complications post-partum</string>
    <string name="msg_date_regle">Date du dernier Regle</string>

    <!--error message-->
    <string name="error_message_empty_field">*</string>

    <!--toolbar title-->
    <string name="add_patient">Nouveau</string>
    <string name="antecedent_patient">Antecedent</string>
    <string name="title_cpn_two">Deuxieme consultation</string>
    <string name="title_cpn_three">Troisieme Consultation</string>
    <string name="title_cpn_one">Premiere consultation</string>
    <string name="title_cpn_four">Quatrieme Consultation</string>
    <string name="tlb_new_patient">Ajouter une patiente</string>
    <string name="tlb_antecedent">Antecedent de la patiente</string>
    <string name="tlb_list_activity">Toutes les patientes</string>
    <string name="arrete_minister">Arrete ministeriel</string>
    <string name="province">Select province</string>
    <string name="enregistrer">S\'enregistrer</string>
    <string name="connecter">Se connecter</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="refresh">refresh</string>
    <string name="rechercher">nom ,  telephone, numero</string>


</resources>
