<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/activity_horizontal_margin"

    android:layout_width="wrap_content"
    android:layout_column="2"
    android:layout_row="6"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/chb_tbc"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/med_text_tbc" />

    <CheckBox
        android:id="@+id/chb_hta"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/med_text_hta" />

    <CheckBox
        android:id="@+id/chb_sca"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/med_text_sca" />

    <CheckBox
        android:id="@+id/chb_dbt"
        android:layout_column="2"
        android:layout_row="2"
        android:text="@string/med_text_dbt" />

    <CheckBox
        android:id="@+id/chb_car"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/med_text_car" />

    <CheckBox
        android:id="@+id/chb_mgf"
        android:layout_column="2"
        android:layout_row="3"
        android:text="@string/med_text_mgf" />

    <CheckBox
        android:id="@+id/chb_raa"
        android:layout_column="1"
        android:layout_row="4"
        android:text="@string/med_text_raa" />

    <CheckBox
        android:id="@+id/chb_syphilis"
        android:layout_column="2"
        android:layout_row="4"
        android:text="@string/med_text_syphylis" />

    <CheckBox
        android:id="@+id/chb_sida"
        android:layout_column="1"
        android:layout_row="5"
        android:text="@string/med_text_vih" />

    <CheckBox
        android:id="@+id/chb_vvs"
        android:layout_column="2"
        android:layout_row="5"
        android:text="@string/med_text_vvs" />

    <CheckBox
        android:id="@+id/chb_pep"
        android:layout_column="1"
        android:layout_row="6"
        android:text="@string/med_text_Pep" />
</GridLayout>