<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:paddingTop="8dp"
    android:layout_column="2"
    android:layout_row="2"
    >

    <CheckBox
        android:id="@+id/chb_cesariene"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/gyn_text_cesariene" />

    <CheckBox
        android:id="@+id/chb_cerclage"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/gyn_text_cerclage" />

    <CheckBox
        android:id="@+id/chb_fibrone"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/gyn_text_fibrone" />

    <CheckBox
        android:id="@+id/chb_fracture_bassin"
        android:layout_column="2"
        android:layout_row="2"
        android:text="@string/gyn_text_fracture_bassin" />

    <CheckBox
        android:id="@+id/chb_geu"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/gyn_text_geu" />

    <CheckBox

        android:id="@+id/chb_fistude"
        android:layout_column="2"
        android:layout_row="3"
        android:text="@string/gyn_text_Fistude" />

    <CheckBox

        android:id="@+id/chb_cecatrice"
        android:layout_column="1"
        android:layout_row="4"
        android:text="@string/gyn_text_uterus" />

    <CheckBox

        android:id="@+id/chb_sterilite"
        android:layout_column="2"
        android:layout_row="4"
        android:text="@string/gyn_text_traitement" />
</GridLayout>