<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_patient"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/menu_new" />
        <item
            android:id="@+id/nav_cpn"
            android:icon="@drawable/ic_airline_seat_flat_angled_black_24dp"
            android:title="@string/menu_cpn" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_statistic" />
    </group>

    
</menu>
