<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obs_text_parite"/>
        <EditText
            android:id="@+id/obs_parite"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obs_text_gestite"/>
        <EditText
            android:id="@+id/obs_gestite"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obs_text_avortement"/>
        <EditText
            android:id="@+id/obs_avortement"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="0"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obs_text_Dystocie"/>
        <EditText
            android:id="@+id/obs_distocie"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="0"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obs_text_Eutocie"/>
        <EditText
            android:id="@+id/obs_eutocie"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obs_text_Enfant"/>
        <EditText
            android:id="@+id/obs_enf"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="0"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obs_text_mort_ne"/>
        <EditText
            android:id="@+id/obs_mort_ne"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obs_text_post_mature"/>
        <EditText
            android:id="@+id/obs_post_mature"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obs_text_premature"/>
        <EditText
            android:id="@+id/obs_premature"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="0"/>
    </LinearLayout>


    <!--<CheckBox-->
        <!--android:id="@+id/chb_parite"-->
        <!--android:layout_column="1"-->
        <!--android:layout_row="1"-->
        <!--android:text="@string/obs_text_parite" />-->

    <!--<CheckBox-->
        <!--android:id="@+id/chb_gestile"-->
        <!--android:layout_column="2"-->
        <!--android:layout_row="1"-->
        <!--android:text="@string/obs_text_gestite" />-->

    <!--<CheckBox-->
        <!--android:id="@+id/chb_enfant"-->
        <!--android:layout_column="1"-->
        <!--android:layout_row="2"-->
        <!--android:text="@string/obs_text_Enfant" />-->

    <!--<CheckBox-->
        <!--android:id="@+id/chb_avortement"-->
        <!--android:layout_column="2"-->
        <!--android:layout_row="2"-->
        <!--android:text="@string/obs_text_avortement" />-->

    <!--<CheckBox-->
        <!--android:id="@+id/chb_dystocie"-->
        <!--android:layout_column="1"-->
        <!--android:layout_row="3"-->
        <!--android:text="@string/obs_text_Dystocie" />-->

    <!--<CheckBox-->
        <!--android:id="@+id/chb_eutocie"-->
        <!--android:layout_column="2"-->
        <!--android:layout_row="3"-->
        <!--android:text="@string/obs_text_Eutocie" />-->

    <!--<CheckBox-->
        <!--android:id="@+id/chb_premature"-->
        <!--android:layout_column="1"-->
        <!--android:layout_row="4"-->
        <!--android:text="@string/obs_text_premature" />-->

    <!--<CheckBox-->
        <!--android:id="@+id/chb_postmature"-->
        <!--android:layout_column="2"-->
        <!--android:layout_row="4"-->
        <!--android:text="@string/obs_text_post_mature" />-->

    <!--<CheckBox-->
        <!--android:id="@+id/chb_mort"-->
        <!--android:layout_column="1"-->
        <!--android:layout_row="5"-->
        <!--android:text="@string/obs_text_mort_ne" />-->

    <!--<CheckBox-->
        <!--android:id="@+id/chb_complication"-->
        <!--android:layout_column="2"-->
        <!--android:layout_row="5"-->
        <!--android:text="@string/obs_text_complication" />-->

</LinearLayout>