<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    tools:context="com.example.david.matibabu.addpatient.PatientInfoFragment">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_account_circle_black_24dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pat_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/pat_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom_patiente"
            android:singleLine="true" />



    </android.support.design.widget.TextInputLayout>

</LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginRight="8dp"
         android:src="@drawable/ic_phone_black_24dp"
         />
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_pat_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/pat_telephone">

         <android.support.design.widget.TextInputEditText
             android:id="@+id/pat_num"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="phone"
             android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>

 </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_add_location_black_24dp"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pat_address"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pat_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pat_address" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_today_black_24dp"

            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pat_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pat_anniv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/pat_date"
                android:longClickable="false"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tip_pat_etatcivil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp">

        <AutoCompleteTextView
            android:id="@+id/auto_compl_etat_civil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/pat_etat_civil" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_account_box_black_24dp"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/conj_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pat_conjoint"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_phone_black_24dp"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/conj_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pat_conjoint_tel"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_urg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/urgence_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="32dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_urg_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/urgence_num" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>
